# scripts

./: .gitignore  Folder.DotSettings  README.md
bash/: last-commit-dates.sh  last-commited.sh  overlay-metadata-on-photos.sh  rip-audio-cd.sh
fsharp/: DaysSince.fsx  Enquoten.fsx  FSharp6.fsx  FilesWithSignificantDates.fsx  FiveOfAKind.fsx  FriendlyFileSizes.fsx  RecursivePathNormalizer.fsx  RecursiveRandomRename.fsx  SanitizeFileNamesWithMultipleYears.fsx  TextToSlackEmoji.fsx  XkcdScreamCipher.fsx  days-since.fsx  enquoten.fsx
fsharp/API/: IsEven.fsx
fsharp/Practice/: Graphs.fsx  Let.fsx
fsharp/Problems/: SpecialArray.fsx
ocaml/: text_to_slack_emoji.ml
ocaml/text_to_slack_emoji/: dune-project  text_to_slack_emoji.opam
ocaml/text_to_slack_emoji/lib/: dune
ocaml/text_to_slack_emoji/test/: dune
ruby/: convert-audio.rb  list_public_method_names.rb  merge_hashes.rb  recursive_random_rename.rb  sum_hashes.rb  text-to-slack-emoji.rb  text_to_slack_emoji.rb
