(lang dune 3.17)

(name text_to_slack_emoji)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name <author@example.com>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name text_to_slack_emoji)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends
  (ocaml (>= 4.14))
  base)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
